holos/deploy/clusters/k3d-holos/components/kargo/serviceentry-kargo-webhooks-holos-localhost.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    app.kubernetes.io/name: kargo
  name: kargo-webhooks-holos-localhost
  namespace: kargo
spec:
  endpoints:
  - address: default-istio.istio-gateways.svc.cluster.local
  hosts:
  - kargo-webhooks.holos.localhost
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
